resources/css/index.css
@import url('https://fonts.googleapis.com/css2?family=Aleo:wght@400;700&family=Rosarivo:ital@0;1&display=swap');

#banner {
	background-color: black;
	padding: 20px;
}

#banner2 {
	border-style: solid;
	border-width: 7.5px;
	border-color: white;
	padding: 15px;
}

head, body, h1, h2, h3, h4, h5, button {
	margin: 0;
	padding: 0;
}

h1 {
	font-family: 'Aleo', serif;
	color: white;
	font-size: 75px;
	font-weight:700;
	letter-spacing: 0.15em;
	line-height: 1.1;
}

h2 {
	font-family: 'Rosarivo', serif;
	color: white;
	font-size: 35px;
	font-weight:lighter;
	font-style:italic;
}

h3 {
	font-family: 'Aleo', serif;
	text-align: center;
	margin-top: 5px;
}

h4, h5 {
	font-family: 'Aleo', serif;
	font-style: lighter;
}

table, th, td {
	border: 2px solid black;
	border-collapse: collapse;
}

.header {
	font-size: 200%;
	display: inline-block;
	background-color: black;
	width: 100%;
}

#user-info {
	float: right;
	display: grid;
	grid-template-rows: 1fr 1fr;
	padding-right: 20px;
}

#user-info * {
	font-size: 85%;
	display: inline-block;
}

.header .item-on, .header .item-off {
	padding: 15px;
	float: left;
	/**height needed?*/
}

.header .item-on {
	background-color: white;
	color: black;
}

.header .item-off {
	color:white;
}

.header .item-off:hover {
	background-color: grey;
}

.message {
	font-size: 200%;
	padding: 10px;
}

.confirm {
	font-size: 200%;
	padding: 10px;
	display: grid;
	grid-template-columns: 1fr 1fr;
}

.login-wrapper {
	font-size: 150%;
	margin: auto;
	width: 25%;
}

.login-wrapper *{
	display: block;
}

.login-wrapper span {
	background-color: rgb(255, 194, 194);
	padding: 5px;
	border: 1px solid red;

}

.login-wrapper form input{
	font-size: 125%;
	margin: 10px 0;	
	width: 100%;
	box-sizing:border-box;
}

.order-wrapper {
	display: grid;
	grid-gap: 2px;
	justify-items: stretch;
	font-size: 200%;
	margin-top: 1%;
	background-color: black;
}

.wrapper {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
	grid-gap: 5px;
	padding: 5px;
	justify-items: stretch;
	align-items: stretch;
}

.order-header {
	padding: 5px;
	display: grid;
	grid-template-columns: 0.5fr 1fr 1fr 1fr;
	background-color: white;
}

.order-add {
	padding: 15px;
	background-color: lightgrey;
	display: grid;
	grid-template-columns: 1fr;
	width: 100%;
	font-size:75%;
}

.order-add:hover {
	background-color: green;
}

.order-box {
	padding: 15px;
	background-color: lightgrey;
	display: grid;
	grid-template-columns: 0.5fr 1fr 1fr 1fr;
	width: 100%;
	justify-items: left;
	font-size:100%;
}

.order-box:hover {
	background-color: grey;
}

.order-wrap {
	display: grid;
	grid-template-columns: 1fr 0.07fr;
	padding: 5px;
	font-size: 200%;
	justify-items: left;
}

.order-wrap h3 {
	text-align: left;
}

.order-prodlist-wrapper {
	display: grid;
	grid-gap: 2px;
	justify-items: stretch;
	font-size: 200%;
	margin-top: 1%;
	background-color: lightgrey;
}

.order-prodlist-header {
	padding: 5px;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
	background-color: black;
	color: white;
}

.order-prodlist-box {
	padding: 15px;
	background-color: white;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
	width: 100%;
	justify-items: left;
	font-size:75%;
}

.order-prodlist-edit-header {
	padding: 5px;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 0.5fr;
	background-color: black;
	color: white;
}

.order-prodlist-edit-box {
	padding: 15px;
	background-color: white;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 0.5fr;
	width: 100%;
	justify-items: left;
	font-size:75%;
}

.order-prodlist-add {
	padding: 15px;
	background-color: white;
	display: grid;
	grid-template-columns: 1fr;
	width: 100%;
	font-size:75%;
}

.order-prodlist-add:hover {
	background-color: green;
}

.prod-wrap {
	display: grid;
	grid-template-columns: 1fr 2fr 0.2fr;
	grid-gap: 30px;
	padding: 5px;
	font-size: 200%;
}

.prod-wrap h3 {
	text-align: left;
}

.prod-wrap h2 {
	font-style: normal;
	font-weight: normal;
	color: black;
	font-size: 75%;
}

.prod-wrap .product {
	border: 5px solid black;
}

.add {
	padding: 20px;
	width: 100%;
	height: 100%;
}

.add:hover {
	background-color: green;
}
.box {
	padding: 20px;
	font-size: 125%;
	color: rgb(75, 75, 75);
	display: grid;
	width: 100%;
	height: 100%;
	grid-template-rows: 3fr 1fr;
}

.box:hover {
	background-color: lightgrey;
	color: black;
}

.prod-img {
	background-repeat:no-repeat;
	background-position:center;
	background-size:contain;
	width: 100%;
	height: 100%;
}

.product {
	width: 100%;
}

.plus {
	max-width: 100%;
	max-height: 100%;
}

.icon {
	max-width: 50px;
	max-height: 100%;
	background-color: none;
}

button {
	border: none;
	background-color: transparent;
	cursor: pointer;
}

a {
	text-decoration: none;
}
.text-input {
	border:none;

}
.text-input tr td {
	padding: 10px;
	border: none;
}

.text-input * {
	vertical-align: top;
}

.text-input .prod-err {
	background-color: rgb(255, 194, 194);
	padding: 5px;
	border: 1px solid red;
	font-size: 75%;
}

input, textarea {
	font-size: 15px;
	font-family: 'Aleo',serif;
}

.home {
	color: white;
	background-color: black;
	display: inline-block;
	border: 2px solid black;
	margin: 5px;
	padding: 10px;
	font-size: 125%;
	cursor: pointer;
}

.home:hover {
	color: black;
	background-color: white;
}

.confirm div .home {
	font-size: 100%;
}

.cancel {
	color: white;
	background-color: black;
	display: inline-block;
	margin: 5px;
	padding: 10px;
	font-size: 75%;
}

.cancel:hover {
	background-color: red;
}

.complete {
	color: white;
	background-color: black;
	display: inline-block;
	margin: 5px;
	padding: 10px;
	font-size: 75%;
	cursor: pointer;
	border: none;
	font-weight:700;
}

.complete:hover {
	background-color: green;
}

#del-con .complete {
	font-size: 100%
}

#del-con .complete:hover {
	background-color: red;
}

